--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
 body {
-  
+  background-color: #38D58;
+  color: white;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+}
+.calculadora {
+  animation: sideIn 480ms cubic-bezier(0.42, 0, 0.21, 1)
+  background-color: #2f2b39;
+  border-radius: 2px;
+  box-shadow: 0 1px 2px rgba(0,0,0, 0.15);
+  padding: 10px 20px; 
+  width: 252px;
+}
+.display {
+  margin: 50px 0 60px;
+  text-align: right;
+}
+.display input {
+  background: transparent;
+  border: none;
+  color: #f2f2f2;
+  font-size: 40px;
+  font-weight: 400;
+  text-align: right;
+  width: 100%;
+}
+.display h2 {
+  color: #6d53d6;
+  font-size: 15px;
 }
